external-crates/move/move-compiler/tests/move_2024/typing/module_call_visibility_package_invalid.exp
error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/module_call_visibility_package_invalid.move:10:52
   │
 3 │     public(package) fun f_pkg_public() {}
   │     --------------- This function can only be called from the same address and package as module '0x42::mod_0' (package: '<no package>'). This call is at address '0x54', package '<no package>'
   ·
10 │     public(package) fun f_package_call_package() { mod_0::f_pkg_public() }
   │                                                    ^^^^^^^^^^^^^^^^^^^^^ Invalid call to '0x42::mod_0::f_pkg_public'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/module_call_visibility_package_invalid.move:11:42
   │
 3 │     public(package) fun f_pkg_public() {}
   │     --------------- This function can only be called from the same address and package as module '0x42::mod_0' (package: '<no package>'). This call is at address '0x54', package '<no package>'
   ·
11 │     public fun f_public_call_package() { mod_0::f_pkg_public() }
   │                                          ^^^^^^^^^^^^^^^^^^^^^ Invalid call to '0x42::mod_0::f_pkg_public'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/module_call_visibility_package_invalid.move:12:36
   │
 3 │     public(package) fun f_pkg_public() {}
   │     --------------- This function can only be called from the same address and package as module '0x42::mod_0' (package: '<no package>'). This call is at address '0x54', package '<no package>'
   ·
12 │     fun f_private_call_package() { mod_0::f_pkg_public() }
   │                                    ^^^^^^^^^^^^^^^^^^^^^ Invalid call to '0x42::mod_0::f_pkg_public'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/module_call_visibility_package_invalid.move:19:50
   │
 3 │     public(package) fun f_pkg_public() {}
   │     --------------- This function can only be called from the same address and package as module '0x42::mod_0' (package: '<no package>'). This call is at address '0x54', package '<no package>'
   ·
19 │     public(friend) fun f_friend_call_package() { mod_0::f_pkg_public() }
   │                                                  ^^^^^^^^^^^^^^^^^^^^^ Invalid call to '0x42::mod_0::f_pkg_public'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/module_call_visibility_package_invalid.move:20:42
   │
 3 │     public(package) fun f_pkg_public() {}
   │     --------------- This function can only be called from the same address and package as module '0x42::mod_0' (package: '<no package>'). This call is at address '0x54', package '<no package>'
   ·
20 │     public fun f_public_call_package() { mod_0::f_pkg_public() }
   │                                          ^^^^^^^^^^^^^^^^^^^^^ Invalid call to '0x42::mod_0::f_pkg_public'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/module_call_visibility_package_invalid.move:21:36
   │
 3 │     public(package) fun f_pkg_public() {}
   │     --------------- This function can only be called from the same address and package as module '0x42::mod_0' (package: '<no package>'). This call is at address '0x54', package '<no package>'
   ·
21 │     fun f_private_call_package() { mod_0::f_pkg_public() }
   │                                    ^^^^^^^^^^^^^^^^^^^^^ Invalid call to '0x42::mod_0::f_pkg_public'

